--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-/.project
-/.settings
+*.beam
 /ebin
 /temp
 /temp2
@@ -12,7 +11,6 @@
 /mycache/java/target
 
 /mydb/bin/*.boot
-/mydb/ebin/*.beam
 
 /tcp/ebin
 
