Transform to rebar3 umbrella project

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,9 @@
 _build
 /ebin
 /temp
-/temp2
 
-doc/*
-!doc/overview.edoc
+**/doc/*
+!**/doc/overview.edoc
 
 /mycache/ebin/Mnesia*
 /mycache/ebin/*.beam
