--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,22 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
+
+{eunit_opts, [verbose]}.
+
+{relx, [
+  {release, {ndpar_lib, "0.1.0"}, [ndpar_lib, sasl]}, {mode, dev},
+  {release, {barber, "0.1.0"}, [barber]}, {mode, dev},
+  {release, {mastermind, "1.0.0"}, [mastermind]}, {mode, dev}
+]}.
+
+{profiles, [{prod, [{relx,
+  [
+    %% prod is the default mode when prod
+    %% profile is used, so does not have
+    %% to be explicitly included like this
+    {mode, prod}
+
+    %% use minimal mode to exclude ERTS
+    %% {mode, minimal}
+  ]
+}]}]}.
