Introduce `examples` library
Moved trees.erl and recursion.erl

--- a/rebar.config
+++ b/rebar.config
@@ -6,6 +6,7 @@
 {relx, [
   {release, {ndpar_lib, "0.2.0"}, [ndpar_lib, sasl]}, {mode, dev},
   {release, {barber, "0.2.0"}, [barber]}, {mode, dev},
+  {release, {examples, "0.1.0"}, [examples]}, {mode, dev},
   {release, {mastermind, "1.0.0"}, [mastermind]}, {mode, dev}
 ]}.
 
